manifest/project/deploy-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: deploy-web
  name: deploy-web
  namespace: karasuit
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: deploy-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deploy-web
    spec:
      serviceAccountName: default
      containers:
        - image: asia-northeast1-docker.pkg.dev/buoyant-sunbeam-461215-p9/dev-karasuit-web-repo/my-app:20250606202920
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          name: web
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
