manifest/project/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: deploy-web
  name: svc-web
  namespace: karasuit
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: deploy-web
  type: LoadBalancer
status:
  loadBalancer: {}
